hphp/test/slow/coeffects/parse-memoize-2.php.expectf
Fatal error: This method cannot be memoized because it has a polymorphic context in %s on line 4
